--- a/free-nodes/2024-11-6-clash-node.htm
+++ b/free-nodes/2024-11-6-clash-node.htm
@@ -136,16 +136,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-30-free-shadowrocket-node.htm" title="7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-25-free-node-subscribe.htm" title="4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-26-free-node-subscribe-links.htm" title="5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-13-clash-v2ray-ss-ssr.htm" title="6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-24-clash-node.htm" title="6月24日→22.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">6月24日→22.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-17-clash-node.htm" title="4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-4-free-clash.htm" title="9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-2-free-clash.htm" title="6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-4-free-ssr-subscribe.htm" title="11月4日→21.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">11月4日→21.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-14-clash-node-daily-updates.htm" title="8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-15-clash-node.htm" title="10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-3-clash-v2ray-ss-ssr.htm" title="8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-27-free-v2ray.htm" title="5月27日→20.1M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月27日→20.1M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-24-free-ssr-subscribe.htm" title="5月24日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月24日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm" title="3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-3-shadowrocket-node.htm" title="6月3日→22.6M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">6月3日→22.6M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-shadowrocket-node.htm" title="8月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">8月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-11-free-clash.htm" title="5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-20-clash-v2ray-ss-ssr.htm" title="9月20日→22.5M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">9月20日→22.5M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-10-node-share.htm" title="6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -157,7 +157,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
