--- a/free-nodes/page-11.htm
+++ b/free-nodes/page-11.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-08-01">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-8-1-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/17a9e01ded9e492cb2b2edefa16af20f.webp" alt="8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-8-1-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了新加坡、日本、加拿大、欧洲、韩国、美国、香港等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-07-31">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-7-31-free-clash-subscribe.htm" class="xcblog-blog-url">
@@ -219,22 +233,8 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-07-22">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-7-22-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/b689047df3c43c67dc5627978a2159c3.webp" alt="7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-7-22-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、日本、韩国、新加坡、美国、加拿大、香港等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
-            <ul class="pagination"><li><a href="/free-nodes/page-10.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li class="active"><span>11</span></li><li><a href="/free-nodes/page-12.htm">12</a></li><li><a href="/free-nodes/page-13.htm">13</a></li><li><a href="/free-nodes/page-14.htm">14</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-12.htm">&raquo;</a></li></ul>            <!-- //welcome -->
+            <ul class="pagination"><li><a href="/free-nodes/page-10.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li class="active"><span>11</span></li><li><a href="/free-nodes/page-12.htm">12</a></li><li><a href="/free-nodes/page-13.htm">13</a></li><li><a href="/free-nodes/page-14.htm">14</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-25.htm">25</a></li><li><a href="/free-nodes/page-26.htm">26</a></li> <li><a href="/free-nodes/page-12.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-27-clash-v2ray-ss-ssr.htm" title="4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接">4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-24-clash-node.htm" title="6月24日→22.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">6月24日→22.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-6-free-node-subscribe.htm" title="7月6日→18.6M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">7月6日→18.6M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-29-node-share-links.htm" title="9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-18-free-ssr-subscribe.htm" title="3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接">3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-9-14-free-subscribe-node.htm" title="9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-24-free-node-subscribe.htm" title="10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-10-free-clash-subscribe.htm" title="4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-9-free-v2ray-subscribe.htm" title="4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-30-free-shadowrocket-node.htm" title="5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-9-free-clash.htm" title="11月9日→21.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">11月9日→21.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-25-free-node-subscribe.htm" title="4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" title="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-14-free-ssr-subscribe.htm" title="7月14日→18.2M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">7月14日→18.2M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-10-node-share.htm" title="6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-24-clash-windows.htm" title="8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-2-free-shadowrocket-node.htm" title="9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-21-clash-windows.htm" title="3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
