--- a/free-nodes/page-22.htm
+++ b/free-nodes/page-22.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-04-08">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-4-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-4-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、韩国、日本、加拿大、美国、欧洲、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-04-07">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-4-7-clash-windows.htm" class="xcblog-blog-url">
@@ -219,22 +233,8 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-03-29">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-3-29-clash-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/5faefa7f3266b2052cc429ac9dbbdaf6.webp" alt="3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-3-29-clash-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了新加坡、加拿大、韩国、美国、香港、欧洲、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
-            <ul class="pagination"><li><a href="/free-nodes/page-21.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-17.htm">17</a></li><li><a href="/free-nodes/page-18.htm">18</a></li><li><a href="/free-nodes/page-19.htm">19</a></li><li><a href="/free-nodes/page-20.htm">20</a></li><li><a href="/free-nodes/page-21.htm">21</a></li><li class="active"><span>22</span></li><li><a href="/free-nodes/page-23.htm">23</a></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-23.htm">&raquo;</a></li></ul>            <!-- //welcome -->
+            <ul class="pagination"><li><a href="/free-nodes/page-21.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-18.htm">18</a></li><li><a href="/free-nodes/page-19.htm">19</a></li><li><a href="/free-nodes/page-20.htm">20</a></li><li><a href="/free-nodes/page-21.htm">21</a></li><li class="active"><span>22</span></li><li><a href="/free-nodes/page-23.htm">23</a></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li><li><a href="/free-nodes/page-26.htm">26</a></li> <li><a href="/free-nodes/page-23.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-9-19-clash-node.htm" title="9月19日→19.5M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">9月19日→19.5M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-30-free-shadowrocket-node.htm" title="5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-8-free-ssr-node.htm" title="11月8日→18.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月8日→18.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-5-free-clash.htm" title="3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接">3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-9-clash-node.htm" title="7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-9-node-share.htm" title="10月9日→18.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">10月9日→18.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-19-clash-v2ray-ss-ssr.htm" title="5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-19-clash-windows.htm" title="3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-2-node-share.htm" title="3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-27-clash-v2ray-ss-ssr.htm" title="4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接">4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-23-node-share-links.htm" title="7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-21-free-clash-subscribe.htm" title="6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-1-clash-node.htm" title="4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-8-free-ssr-node.htm" title="10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-26-free-node-subscribe-links.htm" title="5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-14-free-node-subscribe-links.htm" title="3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-12-clash-windows.htm" title="4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接">4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-8-free-node-subscribe.htm" title="9月8日→20.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">9月8日→20.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-12-free-clash-subscribe.htm" title="9月12日→21.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月12日→21.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-23-node-share.htm" title="10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
