--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-10-23">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-23-node-share.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/ba657eb869fd73b341be034765bf0ac4.webp" alt="10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-23-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、香港、新加坡、加拿大、日本、美国、欧洲等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-22">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-22-free-ssr-node.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-10-13">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-13-clash-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-13-clash-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了韩国、加拿大、日本、香港、欧洲、美国、新加坡等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-25.htm">25</a></li><li><a href="/free-nodes/page-26.htm">26</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-16-free-shadowrocket-node.htm" title="7月16日→19.6M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">7月16日→19.6M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-1-free-node-subscribe.htm" title="10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-8-free-node-subscribe.htm" title="9月8日→20.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">9月8日→20.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-15-clash-node.htm" title="10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-23-free-clash.htm" title="5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-18-clash-node.htm" title="5月18日→21.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">5月18日→21.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-11-free-high-speed-nodes.htm" title="3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-13-node-share-links.htm" title="9月13日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">9月13日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-subscribe-node.htm" title="8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm" title="4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接">4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-24-shadowrocket-node.htm" title="3月24日→22.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接">3月24日→22.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-3-free-high-speed-nodes.htm" title="10月3日→19.4M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">10月3日→19.4M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-11-clash-windows.htm" title="8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-13-shadowrocket-node.htm" title="5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-7-clash-node-daily-updates.htm" title="7月7日→19.5M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月7日→19.5M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-2-clash-node.htm" title="4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-26-clash-node-daily-updates.htm" title="6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-27-clash-v2ray-ss-ssr.htm" title="4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接">4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
