--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-09-02">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-9-2-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/17a9e01ded9e492cb2b2edefa16af20f.webp" alt="9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-9-2-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了新加坡、加拿大、欧洲、香港、美国、日本、韩国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-09-01">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-08-23">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-8-23-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/f678a99ac10a1536634e8f00cd88611b.webp" alt="8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-8-23-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、加拿大、新加坡、韩国、欧洲、美国、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-25.htm">25</a></li><li><a href="/free-nodes/page-26.htm">26</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-10-free-clash-subscribe.htm" title="4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-13-shadowrocket-node.htm" title="5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-18-clash-v2ray-ss-ssr.htm" title="9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-31-clash-windows.htm" title="10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-7-free-v2ray-subscribe.htm" title="9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-18-free-node-subscribe.htm" title="7月18日→20.5M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">7月18日→20.5M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-17-node-share-links.htm" title="8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm" title="3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-11-free-high-speed-nodes.htm" title="3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-18-free-clash.htm" title="6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-26-clash-node-daily-updates.htm" title="6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-23-free-v2ray-subscribe.htm" title="9月23日→20.9M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">9月23日→20.9M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-high-speed-nodes.htm" title="10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-25-free-ssr-subscribe.htm" title="5月25日→20.3M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">5月25日→20.3M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" title="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-5-free-v2ray.htm" title="7月5日→21M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">7月5日→21M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-17-clash-node.htm" title="4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-14-clash-node-daily-updates.htm" title="8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
